--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,8 +356,8 @@ h6 {
   flex-direction: column;
   text-align: center;
   position: relative;
-  height: 70vh;
-  padding-top: 60px;
+  height: 70vh; 
+  padding-top: 120px;
 }
 
 #hero h2 {
@@ -482,6 +482,31 @@ h6 {
     transform: translate(85px, 0%);
   }
 }
+.cta-btn-container {
+  display: inline-block;
+  
+}
+.cta-content {
+  background-color: none; 
+  border-radius: 20px; 
+  padding: 5px; 
+  border: 1px solid #ef6603; 
+}
+
+.cta-content img {
+  width: 30px; 
+  margin-right: 5px; 
+  vertical-align: middle; 
+}
+
+.cta-content span {
+  color: #fff;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  text-transform: uppercase;
+}
+
 
 /*--------------------------------------------------------------
 # Sections General
@@ -724,59 +749,153 @@ section {
   }
 }
 
+.cta .cta-btn {
+  font-family: "Raleway", sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 10px 22px; 
+  border-radius: 50px;
+  transition: 0.5s;
+  margin: 10px;
+  color: #fff;
+  background: none; 
+  border: 1px solid #ef6603; 
+}
+
+.cta .cta-btn img {
+  width: 30px;
+  margin: 0;
+}
+
+.cta .cta-btn:hover {
+  background: none; 
+  color: #ef6603;
+}
+
 /*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
-.services .icon-box {
+/* Styles pour l'image */
+.image-container {
+  position: relative;
+  width: 100%;
+  text-align: center; 
+}
+
+.image-container img {
+  width: 80%;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 2px 29px 0 rgba(68, 88, 144, 0.12);
+  margin: 0 auto; 
+}
+
+/* icône informatique */
+.icon-box-inf {
   padding: 30px;
   position: relative;
   overflow: hidden;
   border-radius: 10px;
-  background: #fff;
+  background: #0dcaf0;
   box-shadow: 0 2px 29px 0 rgba(68, 88, 144, 0.12);
   transition: all 0.4s ease-in-out;
   width: 100%;
   height: 100%;
 }
 
-.services .icon-box:hover {
+/*fond au survol informatique */
+.icon-box-inf:hover {
+  background-color: #e9ecef; 
   transform: translateY(-10px);
   box-shadow: 0 2px 35px 0 rgba(68, 88, 144, 0.2);
 }
 
-.services .icon {
-  position: absolute;
-  left: -20px;
-  top: calc(50% - 30px);
+/* icône marketing */
+.icon-box-mark {
+  padding: 30px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+  background: #20c997;
+  box-shadow: 0 2px 29px 0 rgba(68, 88, 144, 0.12);
+  transition: all 0.4s ease-in-out;
+  width: 100%;
+  height: 100%;
+}
+/*fond au survol marketing */
+.icon-box-mark:hover {
+  background-color: #d63384; 
+  transform: translateY(-10px);
+  box-shadow: 0 2px 35px 0 rgba(68, 88, 144, 0.2);
 }
 
-.services .icon i {
-  font-size: 64px;
-  line-height: 1;
-  transition: 0.5s;
+/* icône maintenance */
+.icon-box-maint {
+  padding: 30px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+  background: #adb5bd;
+  box-shadow: 0 2px 29px 0 rgba(68, 88, 144, 0.12);
+  transition: all 0.4s ease-in-out;
+  width: 100%;
+  height: 100%;
 }
 
-.services .title {
+/*fond au survol maintenance */
+.icon-box-maint:hover {
+  background-color: #ffc107; 
+  transform: translateY(-10px);
+  box-shadow: 0 2px 35px 0 rgba(68, 88, 144, 0.2);
+}
+
+
+
+/* Styles pour le titre */
+.title {
   margin-left: 40px;
   font-weight: 700;
+  margin-top: 30px;
   margin-bottom: 15px;
   font-size: 18px;
 }
 
-.services .title a {
+.title a {
   color: #2a2c39;
   transition: ease-in-out 0.3s;
 }
 
-.services .title a:hover {
+.title a:hover {
   color: #ef6603;
 }
 
-.services .description {
+/* Styles pour la description */
+.description {
   font-size: 14px;
   margin-left: 40px;
   line-height: 24px;
   margin-bottom: 0;
+}
+
+/* bouton "Cliquer ici" */
+.btn-get-started {
+  display: block;
+  width: 150px;
+  margin: 20px auto 0;
+  background-color: blue;
+  color: white;
+  text-align: center;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.btn-get-started:hover {
+  background-color: #0066ff;
 }
 
 /*--------------------------------------------------------------
@@ -1060,6 +1179,15 @@ section {
 /*--------------------------------------------------------------
 # Pricing
 --------------------------------------------------------------*/
+.pricing h6 {
+  background-color: #0d6efd; 
+  text-align: center; 
+  padding: 5px; 
+  font-size: 30px; 
+  color: #fff; 
+}
+
+
 .pricing .box {
   padding: 20px;
   background: #fff;
@@ -1100,29 +1228,6 @@ section {
   font-weight: 300;
 }
 
-.pricing ul {
-  padding: 0;
-  list-style: none;
-  color: #444444;
-  text-align: center;
-  line-height: 20px;
-  font-size: 14px;
-}
-
-.pricing ul li {
-  padding-bottom: 16px;
-}
-
-.pricing ul i {
-  color: #ef6603;
-  font-size: 18px;
-  padding-right: 4px;
-}
-
-.pricing ul .na {
-  color: #ccc;
-  text-decoration: line-through;
-}
 
 .pricing .btn-wrap {
   margin: 20px -20px -20px -20px;
@@ -1170,6 +1275,44 @@ section {
   background: #ef6603;
   color: #fff;
 }
+
+.pricing ul {
+  padding: 0;
+  list-style: none;
+  color: #444444;
+  text-align: left;
+  line-height: 20px;
+  font-size: 14px;
+}
+
+.pricing ul li {
+  padding-bottom: 16px;
+  position: relative;
+  display: flex;
+  align-items: center; 
+}
+
+.pricing ul li::before {
+  content: "\2713"; 
+  font-family: 'Arial'; 
+  color: #ef6603;
+  font-size: 24px; 
+  margin-right: 5px; 
+}
+
+.pricing ul li span {
+  font-weight: bold;
+}
+
+.pricing ul li:hover {
+  color: #fc8129; 
+}
+
+.pricing ul li:hover::before {
+  color: #fc8129; 
+}
+
+
 
 /*--------------------------------------------------------------
 # F.A.Q
@@ -1321,6 +1464,24 @@ section {
   opacity: 1;
   bottom: 15px;
 }
+
+/*----------------------------------------------
+# Watsap
+----------------------------------------------------*/
+.whatsapp-icon {
+  position: fixed;
+  bottom: 10px; 
+  right: 10px; 
+  z-index: 9999; 
+}
+
+.whatsapp-icon img {
+  width: 100px; 
+  height: auto; 
+}
+
+
+
 
 /*--------------------------------------------------------------
 # Contact
