--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1180,12 +1180,13 @@ section {
 # Pricing
 --------------------------------------------------------------*/
 .pricing h6 {
-  background-color: #0d6efd; 
-  text-align: center; 
-  padding: 5px; 
-  font-size: 30px; 
-  color: #fff; 
+  background-color: #add8e6; /* Bleu clair */
+  text-align: center;
+  padding: 5px;
+  font-size: 30px;
+  color: #fff;
 }
+
 
 
 .pricing .box {
@@ -1311,6 +1312,7 @@ section {
 .pricing ul li:hover::before {
   color: #fc8129; 
 }
+
 
 
 
@@ -1476,7 +1478,7 @@ section {
 }
 
 .whatsapp-icon img {
-  width: 100px; 
+  width: 50px; 
   height: auto; 
 }
 
